<resources>
    <string name="app_name">Hello People</string>

    <!--MainActivity-->
    <string name="title_activity">Login User</string>
    <string name="hint_name">Name</string>
    <string name="hint_password">Password</string>
    <string name="description_help">Help Button</string>
    <string name="notice_hasLogin">There is already an <b>existing Login</b>, to exit <b>click on
        \'Logout\'</b></string>
    <string name="btn_login">Login</string>
    <string name="btn_clear">Clear</string>
    <string name="error_internet">There is no Internet Connection</string>
    <string name="error_inputs">The <b>%s</b> field must be completed</string>
    <string name="incorrect_login"><b>Incorrect</b> Username or Password</string>
    <string name="switch_language">Choose the language of the "Hello"</string>
    <string name="hint_language">Language</string>
    <string name="title_help">How to Use ?</string>
    <string name="step_useApp">- Enter your Login and Password in the Screen Fields<br/>
        - If you wish, click on "Choose the Language of the Hello" to customize your "Hello"<br/>
        - Click on the "Login" button
    </string>
    <string name="txt_rememberLogin">Remember User</string>

    <!--LoggedUser-->
    <string name="wait_search">Wait while we Search for the IP</string>
    <string name="message_hello">&lt;b>%1$s %2$s&lt;/b>, Welcome!</string>
    <string name="message_successLogin">&lt;b>%1$s %2$s&lt;/b>, You Have Successfully Logged In!</string>
    <string name="message_goodDay">Have a Great Day &lt;b>%s&lt;/b></string>
    <string name="btn_logout">Logout</string>
    <string name="btn_moreDefault">More Details</string>
    <string name="btn_moreAfterClick">More Details</string>
    <string name="title_details">Details</string>
    <string name="txt_ip">IP Address: %s</string>
    <string name="txt_langue">Researched language: %1$s - %2$s</string>
    <string name="txt_errorMessage">Error IP</string>
    <string name="txt_country">Country: %1$s - %2$s</string>
    <string name="txt_region">Region: %1$s - %2$s</string>
    <string name="txt_city">City: %s</string>
    <string name="txt_timezone">TimeZone: %s</string>
    <string name="txt_organization">Organization: %s</string>
    <string name="txt_mobile">Search with Mobile: %s</string>
    <string name="error_detailsIP">Error Receiving IP Details</string>
    <string name="error_hello">Error Receiving Data for \'Hello\'</string>
    <string name="error_search">Unable to get IP, Try Again</string>
    <string name="message_noIp">Disable Proxy and Check Your Internet Connection</string>

    <string-array name="language">
        <item>Arabic</item>
        <item>Azerbaijani</item>
        <item>Albanian</item>
        <item>Armenian</item>
        <item>Belarusian</item>
        <item>Bulgarian</item>
        <item>Bengali</item>
        <item>Bosnian</item>
        <item>Burmese</item>
        <item>Czech</item>
        <item>Croatian</item>
        <item>Chinese</item>
        <item>Danish</item>
        <item>Dzongkha</item>
        <item>English</item>
        <item>English (United Kingdom)</item>
        <item>English (United States)</item>
        <item>Estonian</item>
        <item>Farsi</item>
        <item>Finnish</item>
        <item>Filipino</item>
        <item>French</item>
        <item>German</item>
        <item>Greek</item>
        <item>Georgian</item>
        <item>Hebrew</item>
        <item>Hindi</item>
        <item>Hungarian</item>
        <item>Indonesian</item>
        <item>Icelandic</item>
        <item>Italian</item>
        <item>Japanese</item>
        <item>Kazakh</item>
        <item>Khmer</item>
        <item>Korean</item>
        <item>Letzeburgesch</item>
        <item>Lao</item>
        <item>Lithuanian</item>
        <item>Latvian</item>
        <item>Macedonian (FYROM)</item>
        <item>Mongolian</item>
        <item>Malaysian</item>
        <item>Nepali</item>
        <item>Norwegian</item>
        <item>Polish</item>
        <item>Portuguese</item>
        <item>Romanian</item>
        <item>Russian</item>
        <item>Slovak</item>
        <item>Slovenian</item>
        <item>Serbian</item>
        <item>Swedish</item>
        <item>Suaíli</item>
        <item>Spanish</item>
        <item>Thai</item>
        <item>Turco</item>
        <item>Ukrainian</item>
        <item>Vietnamese</item>
    </string-array>

    <string-array name="code_language">
        <item>ar</item>
        <item>az</item>
        <item>sq</item>
        <item>hy</item>
        <item>be</item>
        <item>bg</item>
        <item>bn</item>
        <item>bs</item>
        <item>my</item>
        <item>cs</item>
        <item>hr</item>
        <item>zh</item>
        <item>da</item>
        <item>dz</item>
        <item>en</item>
        <item>en-gb</item>
        <item>en-us</item>
        <item>et</item>
        <item>fa</item>
        <item>fi</item>
        <item>fil</item>
        <item>fr</item>
        <item>de</item>
        <item>el</item>
        <item>ka</item>
        <item>he</item>
        <item>hi</item>
        <item>hu</item>
        <item>id</item>
        <item>is</item>
        <item>it</item>
        <item>ja</item>
        <item>kk</item>
        <item>km</item>
        <item>ko</item>
        <item>lb</item>
        <item>lo</item>
        <item>lt</item>
        <item>lv</item>
        <item>mk</item>
        <item>mn</item>
        <item>ms</item>
        <item>ne</item>
        <item>no</item>
        <item>pl</item>
        <item>pt</item>
        <item>ro</item>
        <item>ru</item>
        <item>sk</item>
        <item>sl</item>
        <item>sr</item>
        <item>sv</item>
        <item>sw</item>
        <item>es</item>
        <item>th</item>
        <item>tk</item>
        <item>uk</item>
        <item>vi</item>
    </string-array>

</resources>